logs/hello-rule-set.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/hello_rule_set'...
Compiling './lib/python3.5/site-packages/hello_rule_set/get_rule_set.py'...
***   File "./lib/python3.5/site-packages/hello_rule_set/get_rule_set.py", line 163
    print u"正则表达式索引错误，请检查文件名格式，以及get_sql函数"
                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/hello_rule_set/weight_optimization.py'...
***   File "./lib/python3.5/site-packages/hello_rule_set/weight_optimization.py", line 585
    print u"当前代数:", i, u"当前种群中最优值:", scores[0][0], u"最优值准确率:", self.PRF_cal(self._trans2to10(best.reshape(1, len(best)), leninfo, rang)[0], rang, "accuracy"), u"最优值召回率:", self.PRF_cal(self._trans2to10(best.reshape(1, len(best)), leninfo, rang)[0], rang, "recall")
                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/hello_rule_set-1.5.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
